<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_catalog_page">Каталог</string>

    <!-- Tags -->
    <string name="tag_all">Смотреть все</string>
    <string name="tag_face">Лицо</string>
    <string name="tag_body">Тело</string>
    <string name="tag_suntan">Загар</string>
    <string name="tag_mask">Маски</string>

    <!-- RecyclerView item -->
    <string name="desc_like_button">Добавить в избранное</string>
    <string name="desc_rating_star">Оценка</string>
    <string name="desc_add_to_cart_button">Добавить в корзину</string>

    <!-- Patterns -->
    <string name="discount_pattern">-%1$d%%</string>
    <string name="brackets_pattern">(%1$d)</string>
    <string name="price_pattern">%1$d %2$s</string>

    <string-array name="sorting_types">
        <item>По популярности</item>
        <item>По уменьшению цены</item>
        <item>По возрастанию цены</item>
    </string-array>

    <string name="filter">Фильтры</string>
    <string name="desc_back">Назад</string>
    <string name="desc_share">Поделиться</string>
    <string name="question">Вопрос</string>
    <string name="title">Название</string>
    <string name="subtitle">Подзагаловок</string>
    <string name="available_pattern">Доступно для заказа %1$d штук</string>
    <string name="review_one_count">1 отзыв</string>
    <string name="review_few_count_pattern">%1$d отзыва</string>
    <string name="review_lot_count_pattern">%1$d отзывов</string>
    <string name="description">Описание</string>
    <string name="show">Подробнее</string>
    <string name="hide">Скрыть</string>
    <string name="characteristics">Характеристики</string>
    <string name="ingredients">Состав</string>
    <string name="add_to_cart">Добавить в корзину</string>

</resources>