<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.item.ItemFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <ImageButton
            style="@style/ImageButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:layout_weight="1"

            android:contentDescription="@string/desc_back"
            android:src="@drawable/ic_back" />
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:src="@drawable/ic_share"
            android:contentDescription="@string/desc_share"

            style="@style/ImageButtonStyle"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <ToggleButton
            android:id="@+id/ibLike"

            style="@style/toggleButton"
            android:layout_width="@dimen/preview_like_button_size"
            android:layout_height="@dimen/preview_like_button_size"

            android:background="@drawable/ic_like_toggle"
            android:contentDescription="@string/desc_like_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/includePager" />

        <include
            android:id="@+id/includePager"

            android:layout_height="300dp"
            android:layout_width="match_parent"

            layout="@layout/pager_indicator_layout"/>

        <ImageButton
            style="@style/ImageButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_question"
            android:contentDescription="@string/question"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>