<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="160dp"
    android:layout_height="wrap_content"

    android:background="@drawable/catalog_item_bg"
    android:layout_margin="10dp"
    android:paddingStart="@dimen/item_padding"
    android:paddingTop="@dimen/item_padding">

    <include
        android:id="@+id/includePager"
        android:layout_height="@dimen/preview_item_viewpager_size"
        android:layout_width="match_parent"
        layout="@layout/pager_indicator_layout"/>

    <ToggleButton
        android:id="@+id/ibLike"

        style="@style/toggleButton"
        android:layout_width="@dimen/preview_like_button_size"

        android:layout_height="@dimen/preview_like_button_size"
        android:background="@drawable/ic_like_toggle"

        android:contentDescription="@string/desc_like_button"
        app:layout_constraintStart_toStartOf="@+id/bAddToCart"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvOldCost"
        style="@style/OldPriceStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="000 ₽"
        android:textSize="9sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/includePager" />

    <TextView
        android:id="@+id/tvCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="000 ₽"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tvOldCost"

        app:layout_constraintTop_toBottomOf="@+id/tvOldCost" />

    <TextView
        android:id="@+id/tvDiscount"
        android:layout_width="wrap_content"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="@+id/tvCost"
        app:layout_constraintStart_toEndOf="@+id/tvCost"
        app:layout_constraintTop_toTopOf="@+id/tvCost"

        android:layout_marginStart="5dp"

        style="@style/DiscountViewStyle"/>

    <TextView
        android:id="@+id/tvItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="Title"
        android:textSize="14sp"

        app:layout_constraintStart_toStartOf="@+id/tvCost"
        app:layout_constraintTop_toBottomOf="@+id/tvCost" />

    <TextView
        android:id="@+id/tvItemSubtitle"
        android:layout_width="match_parent"
        android:layout_height="35dp"

        app:layout_constraintStart_toStartOf="@+id/tvItemTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvItemTitle"

        style="@style/PreviewContentTextStyle"

        android:text="Subtitle" />

    <LinearLayout
        android:id="@+id/llRatingRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"

        app:layout_constraintStart_toStartOf="@+id/tvItemSubtitle"
        app:layout_constraintTop_toBottomOf="@+id/tvItemSubtitle"

        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_rating_start"
            android:contentDescription="@string/desc_rating_star" />

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingStart="@dimen/preview_rating_padding_left"

            android:textSize="@dimen/preview_item_small_text_size"
            android:text="212"
            android:textColor="@color/orange"/>

        <TextView
            android:id="@+id/tvReviewsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingStart="@dimen/preview_rating_padding_left"

            android:textSize="@dimen/preview_item_small_text_size"
            android:text="@string/brackets_pattern"
            android:textColor="@color/grey"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/bAddToCart"
        android:layout_width="30dp"
        android:layout_height="30dp"

        android:background="@drawable/preview_item_buy_button_bg"
        android:contentDescription="@string/desc_add_to_cart_button"

        android:src="@drawable/ic_plus"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llRatingRow"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>