<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="160dp"
    android:layout_height="wrap_content">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpPhotos"
        android:layout_width="match_parent"
        android:layout_height="@dimen/preview_item_viewpager_size"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibLike"

        android:layout_width="@dimen/preview_like_button_size"
        android:layout_height="@dimen/preview_like_button_size"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_like"

        style="@style/ImageButtonStyle"
        android:contentDescription="@string/desc_like_button" />

    <me.relex.circleindicator.CircleIndicator3
        android:id="@+id/ciIndicator"
        android:layout_width="0dp"
        android:layout_height="10dp"

        app:layout_constraintEnd_toEndOf="@+id/vpPhotos"
        app:layout_constraintStart_toStartOf="@+id/vpPhotos"
        app:layout_constraintTop_toBottomOf="@+id/vpPhotos"

        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/tvOldCost"
        style="@style/OldPriceStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="000 ₽"
        android:textSize="9sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ciIndicator" />

    <TextView
        android:id="@+id/tvCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="000 ₽"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tvOldCost"

        app:layout_constraintTop_toBottomOf="@+id/tvOldCost" />

    <TextView
        android:id="@+id/tvDiscount"
        android:layout_width="wrap_content"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="@+id/tvCost"
        app:layout_constraintStart_toEndOf="@+id/tvCost"
        app:layout_constraintTop_toTopOf="@+id/tvCost"

        android:layout_marginStart="5dp"

        style="@style/DiscountViewStyle"/>

    <TextView
        android:id="@+id/tvItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="Title"
        android:textSize="14sp"

        app:layout_constraintStart_toStartOf="@+id/tvCost"
        app:layout_constraintTop_toBottomOf="@+id/tvCost" />

    <TextView
        android:id="@+id/tvItemSubtitle"
        android:layout_width="match_parent"
        android:layout_height="35dp"

        app:layout_constraintStart_toStartOf="@+id/tvItemTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvItemTitle"

        style="@style/SubtitleStyle"

        android:text="Subtitle" />

    <LinearLayout
        android:id="@+id/llRatingRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"

        app:layout_constraintStart_toStartOf="@+id/tvItemSubtitle"
        app:layout_constraintTop_toBottomOf="@+id/tvItemSubtitle"

        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_rating_start"
            android:contentDescription="@string/desc_rating_star" />

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingStart="@dimen/preview_rating_padding_left"

            android:textSize="@dimen/preview_item_small_text_size"
            android:text="212"
            android:textColor="@color/orange"/>

        <TextView
            android:id="@+id/tvReviewsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingStart="@dimen/preview_rating_padding_left"

            android:textSize="@dimen/preview_item_small_text_size"
            android:text="@string/brackets_pattern"
            android:textColor="@color/grey"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/bAddToCart"
        android:layout_width="30dp"
        android:layout_height="29dp"

        android:background="@drawable/preview_item_buy_button_bg"
        android:contentDescription="@string/desc_add_to_cart_button"

        android:src="@drawable/ic_plus"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llRatingRow"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>